refactor: use PeriodDimension in analytics